// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule h37 should contain documentation 1`] = `
Object {
  "description": "Both HTML5 and WCAG 2.0 requires images to have a alternative text for each image.",
  "url": "https://html-validate.org/rules/h37.html",
}
`;

exports[`rule h37 with alias (array) smoketest 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/rules/wcag/h37.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 4,
        "message": "<img> is missing required alt attribute",
        "offset": 55,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<img alt=\\"..\\">
<img alt=\\"\\">
<img translate-attr=\\"..\\">
<img>

<!-- regression #33 (https://gitlab.com/html-validate/html-validate/issues/33) -->
<div>
	<span>
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule h37 with alias smoketest 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/rules/wcag/h37.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 4,
        "message": "<img> is missing required alt attribute",
        "offset": 55,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<img alt=\\"..\\">
<img alt=\\"\\">
<img translate-attr=\\"..\\">
<img>

<!-- regression #33 (https://gitlab.com/html-validate/html-validate/issues/33) -->
<div>
	<span>
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule h37 with allowEmpty false smoketest 1`] = `
Array [
  Object {
    "errorCount": 3,
    "filePath": "test-files/rules/wcag/h37.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<img> is missing required alt attribute",
        "offset": 16,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 3,
        "message": "<img> is missing required alt attribute",
        "offset": 29,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 4,
        "message": "<img> is missing required alt attribute",
        "offset": 55,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<img alt=\\"..\\">
<img alt=\\"\\">
<img translate-attr=\\"..\\">
<img>

<!-- regression #33 (https://gitlab.com/html-validate/html-validate/issues/33) -->
<div>
	<span>
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule h37 with default options smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/wcag/h37.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 3,
        "message": "<img> is missing required alt attribute",
        "offset": 29,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 4,
        "message": "<img> is missing required alt attribute",
        "offset": 55,
        "ruleId": "wcag/h37",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<img alt=\\"..\\">
<img alt=\\"\\">
<img translate-attr=\\"..\\">
<img>

<!-- regression #33 (https://gitlab.com/html-validate/html-validate/issues/33) -->
<div>
	<span>
</div>
",
    "warningCount": 0,
  },
]
`;
